# WebScraperSubsRust

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.pi  Makefile.toml  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  rss_example.xml  tailwind.config.cjs  tracked_data.json  tracked_data.json.bak  tracked_shows.json
docker/: Dockerfile  start-tracker.sh
src/: main.rs  raii_process_driver.rs  subsplease.rs
src/db/: config.rs  filters.rs  history.rs  mod.rs  schema.rs  shows.rs
src/pages/: anime.rs  filters.rs  fortune.rs  home.rs  html_template.rs  mod.rs
src/scraper/: anilist.rs  filter_engine.rs  mod.rs  nyaasi.rs  rss.rs  season_parser.rs  subsplease.rs  tracker.rs  transmission.rs
static/: htmx.min.js
styles/: tailwindcss.css
templates/: index.html
templates/components/: card.html  configure.html  grid.html  match_selection.html  season_bar.html  shows.html  source_table.html  table.html  tracked.html
templates/layouts/: base.html
templates/pages/: home.html
