[package]
name = "web_scraper_subs_rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
scraper = "0.25"
serde_json = "1.0"
chrono = "0.4"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
urlencoding = "2.1"
quick-xml = "0.37"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
